test/cases/compile_errors/slice_of_non_array_type.zig
comptime {
    _ = 1[0..];
}

// error
// backend=stage2
// target=native
//
// :2:10: error: slice of non-array type 'comptime_int'
